[metadata]
name = timer
version = attr: timer.__version__
author = bowdbeg
author_email = sd21505@toyota-ti.ac.jp
license = MIT
license_file = LICENSE
description = A Python library to measure time
keywords = timer, benchmark
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10

[options.extras_require]
dev = pytest>=3